// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> keeps child components unchanged 1`] = `
<div
  className="App ant-layout"
>
  <Adapter
    className="header"
  >
    <Icon
      className="trigger"
      onClick={[Function]}
      type="menu-fold"
    />
    Historical Data
  </Adapter>
  <Sider
    className="sider"
    collapsed={false}
    collapsedWidth={80}
    collapsible={true}
    defaultCollapsed={false}
    prefixCls="ant-layout-sider"
    reverseArrow={false}
    style={Object {}}
    trigger={null}
    width={200}
  >
    <Menu
      className=""
      defaultSelectedKeys={
        Array [
          "0",
        ]
      }
      focusable={false}
      mode="inline"
      prefixCls="ant-menu"
      theme="dark"
    >
      <MenuItem
        key="0"
      >
        <Icon
          type="clock-circle-o"
        />
        <span>
          Current Status
        </span>
      </MenuItem>
      <MenuItem
        key="1"
      >
        <Icon
          type="calendar"
        />
        <span>
          Historical Data
        </span>
      </MenuItem>
      <MenuItem
        key="2"
      >
        <Icon
          type="bars"
        />
        <span>
          Node List
        </span>
      </MenuItem>
      <MenuItem
        key="3"
      >
        <Icon
          type="api"
        />
        <span>
          Group List
        </span>
      </MenuItem>
      <MenuItem
        key="4"
      >
        <Icon
          type="tags-o"
        />
        <span>
          Tag List
        </span>
      </MenuItem>
      <MenuItem
        key="5"
      >
        <Icon
          type="setting"
        />
        <span>
          Settings
        </span>
      </MenuItem>
      <MenuItem
        key="6"
      >
        <Icon
          type="logout"
        />
        <span>
          Sign Out
        </span>
      </MenuItem>
    </Menu>
  </Sider>
  <Adapter
    style={
      Object {
        "background": "#fff",
        "margin": "24px 16px",
        "minHeight": 280,
        "padding": 24,
      }
    }
  >
    Content
  </Adapter>
</div>
`;

exports[`<App /> keeps unchanged in normal state 1`] = `
<div
  className="App ant-layout ant-layout-has-sider"
>
  <div
    className="header ant-layout-header"
  >
    <i
      className="anticon anticon-menu-fold trigger"
      onClick={[Function]}
    />
    Historical Data
  </div>
  <div
    className="sider ant-layout-sider"
    style={
      Object {
        "flex": "0 0 200px",
        "maxWidth": "200px",
        "minWidth": "200px",
        "width": "200px",
      }
    }
  >
    <div
      className="ant-layout-sider-children"
    >
      <ul
        className="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
        style={Object {}}
      >
        <li
          aria-disabled={undefined}
          className="ant-menu-item ant-menu-item-selected"
          onBlur={undefined}
          onClick={[Function]}
          onContextMenu={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
          title={undefined}
        >
          <i
            className="anticon anticon-clock-circle-o"
          />
          <span>
            Current Status
          </span>
        </li>
        <li
          aria-disabled={undefined}
          className="ant-menu-item"
          onBlur={undefined}
          onClick={[Function]}
          onContextMenu={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
          title={undefined}
        >
          <i
            className="anticon anticon-calendar"
          />
          <span>
            Historical Data
          </span>
        </li>
        <li
          aria-disabled={undefined}
          className="ant-menu-item"
          onBlur={undefined}
          onClick={[Function]}
          onContextMenu={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
          title={undefined}
        >
          <i
            className="anticon anticon-bars"
          />
          <span>
            Node List
          </span>
        </li>
        <li
          aria-disabled={undefined}
          className="ant-menu-item"
          onBlur={undefined}
          onClick={[Function]}
          onContextMenu={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
          title={undefined}
        >
          <i
            className="anticon anticon-api"
          />
          <span>
            Group List
          </span>
        </li>
        <li
          aria-disabled={undefined}
          className="ant-menu-item"
          onBlur={undefined}
          onClick={[Function]}
          onContextMenu={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
          title={undefined}
        >
          <i
            className="anticon anticon-tags-o"
          />
          <span>
            Tag List
          </span>
        </li>
        <li
          aria-disabled={undefined}
          className="ant-menu-item"
          onBlur={undefined}
          onClick={[Function]}
          onContextMenu={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
          title={undefined}
        >
          <i
            className="anticon anticon-setting"
          />
          <span>
            Settings
          </span>
        </li>
        <li
          aria-disabled={undefined}
          className="ant-menu-item"
          onBlur={undefined}
          onClick={[Function]}
          onContextMenu={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
          title={undefined}
        >
          <i
            className="anticon anticon-logout"
          />
          <span>
            Sign Out
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="ant-layout-content"
    style={
      Object {
        "background": "#fff",
        "margin": "24px 16px",
        "minHeight": 280,
        "padding": 24,
      }
    }
  >
    Content
  </div>
</div>
`;

exports[`<App /> keeps unchanged when menu is collapsed 1`] = `
<div
  className="App ant-layout ant-layout-has-sider"
>
  <div
    className="header ant-layout-header"
  >
    <i
      className="anticon anticon-menu-unfold trigger"
      onClick={[Function]}
    />
    Historical Data
  </div>
  <div
    className="sider ant-layout-sider ant-layout-sider-collapsed"
    style={
      Object {
        "flex": "0 0 80px",
        "maxWidth": "80px",
        "minWidth": "80px",
        "width": "80px",
      }
    }
  >
    <div
      className="ant-layout-sider-children"
    >
      <ul
        className="ant-menu ant-menu-dark ant-menu-inline-collapsed ant-menu-root ant-menu-vertical"
        role="menu"
        style={Object {}}
      >
        <li
          className="ant-menu-item ant-menu-item-selected"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <i
            className="anticon anticon-clock-circle-o"
          />
          <span>
            Current Status
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <i
            className="anticon anticon-calendar"
          />
          <span>
            Historical Data
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <i
            className="anticon anticon-bars"
          />
          <span>
            Node List
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <i
            className="anticon anticon-api"
          />
          <span>
            Group List
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <i
            className="anticon anticon-tags-o"
          />
          <span>
            Tag List
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <i
            className="anticon anticon-setting"
          />
          <span>
            Settings
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <i
            className="anticon anticon-logout"
          />
          <span>
            Sign Out
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="ant-layout-content"
    style={
      Object {
        "background": "#fff",
        "margin": "24px 16px",
        "minHeight": 280,
        "padding": 24,
      }
    }
  >
    Content
  </div>
</div>
`;
